--- a/blog/views/admin/user_list.html
+++ b/blog/views/admin/user_list.html
@@ -15,12 +15,12 @@
     </tr>
   </thead>
   <tbody>
-  	{% for key,val in users %}
+  	{% for user in users %}
     <tr>
-      <td>{{ val._id.toString() }}</td>
-      <td>{{ val.username }}</td>
+      <td>{{ user._id.toString() }}</td>
+      <td>{{ user.username }}</td>
       <td>
-      	{% if val.isAdmin %}
+      	{% if user.isAdmin %}
       		是
       	{% else %}
       		否
@@ -31,7 +31,25 @@
   </tbody>
 </table>
 </div>
-{% if pages > 1 %}
-{% include './pagination.html' %}
-{% endif %}
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li>
+      <a href="/admin/users/?page={{ page - 1}}" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+      </a>
+    </li>
+    {% for i in list %}
+    {% if i == page %}
+    <li class="active"><a href="javascript:;">{{ i }}</a></li>
+    {% else %}
+    <li><a href="/admin/users/?page={{ i }}">{{ i }}</a></li>
+    {% endif %}
+    {% endfor %}
+    <li>
+      <a href="/admin/users/?page={{ page + 1}}" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+    </li>
+  </ul>
+</nav>
 {% endblock %}
