--- a/blog/views/main/layout.html
+++ b/blog/views/main/layout.html
@@ -30,10 +30,9 @@
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
 	        <li class="active"><a href="index.html">首页<span class="sr-only">(current)</span></a></li>
-	        <li><a href="list.html">微博</a></li>
-	        <li><a href="list.html">视频</a></li>
-	        <li><a href="list.html">相册</a></li>
-	        <li><a href="list.html">故事</a></li>
+	        {% for category in categories %}
+	        <li><a href="/list/{{ category._id.toString() }}">{{ category.name }}</a></li>
+	        {% endfor %}
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container -->
